--- a/Diagramme/Ajouter-FX.fxml
+++ b/Diagramme/Ajouter-FX.fxml
@@ -7,6 +7,8 @@
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.image.ImageView?>
@@ -24,7 +26,7 @@
                <top>
                   <HBox alignment="CENTER_LEFT" prefHeight="47.0" prefWidth="600.0" style="-fx-background-color: ddddd;" BorderPane.alignment="CENTER">
                      <children>
-                        <Label text="Créer un Athlèthe">
+                        <Label text="Créer un Athlète">
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
@@ -375,12 +377,24 @@
                               <Label text="que la limite autorisé" />
                               <Label text="- votre équipe ne peut pas contenir un athelète" />
                               <Label text="ayant un sexe different que le sexe attribué" />
-                              <TitledPane animated="false" collapsible="false">
+                              <TitledPane animated="false" collapsible="false" prefHeight="171.0" prefWidth="285.0" text="Athlète de l'équipe">
                                 <content>
                                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="121.0" prefWidth="297.0">
                                        <opaqueInsets>
                                           <Insets />
                                        </opaqueInsets>
+                                       <children>
+                                          <TableView layoutY="1.0" prefHeight="136.0" prefWidth="285.0">
+                                             <columns>
+                                                <TableColumn prefWidth="53.333314299583435" text="Nom" />
+                                                <TableColumn prefWidth="60.666683197021484" text="Prenom" />
+                                                <TableColumn minWidth="0.0" prefWidth="46.00006866455078" text="Sexe" />
+                                                <TableColumn prefWidth="28.66668701171875" text="A" />
+                                                <TableColumn minWidth="0.0" prefWidth="48.66668701171875" text="E" />
+                                                <TableColumn prefWidth="43.99998474121094" text="F" />
+                                             </columns>
+                                          </TableView>
+                                       </children>
                                     </AnchorPane>
                                 </content>
                               </TitledPane>
@@ -616,7 +630,7 @@
                                     <Insets bottom="30.0" left="20.0" right="40.0" />
                                  </VBox.margin>
                               </TextField>
-                              <Label text="hymne du pays">
+                              <Label text="Hymne du pays">
                                  <padding>
                                     <Insets left="20.0" />
                                  </padding>
