--- a/Diagramme/Ajouter-FX.fxml
+++ b/Diagramme/Ajouter-FX.fxml
@@ -30,6 +30,9 @@
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
+                           <HBox.margin>
+                              <Insets left="20.0" />
+                           </HBox.margin>
                         </Label>
                      </children>
                   </HBox>
@@ -184,6 +187,9 @@
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
+                           <HBox.margin>
+                              <Insets left="20.0" />
+                           </HBox.margin>
                         </Label>
                      </children>
                   </HBox>
@@ -319,6 +325,9 @@
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
+                           <HBox.margin>
+                              <Insets left="20.0" />
+                           </HBox.margin>
                         </Label>
                      </children>
                   </HBox>
@@ -424,6 +433,9 @@
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
+                           <HBox.margin>
+                              <Insets left="20.0" />
+                           </HBox.margin>
                         </Label>
                      </children>
                   </HBox>
@@ -608,6 +620,9 @@
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
+                           <HBox.margin>
+                              <Insets left="20.0" />
+                           </HBox.margin>
                         </Label>
                      </children>
                   </HBox>
