--- a/Diagramme/Epreuve-FX.fxml
+++ b/Diagramme/Epreuve-FX.fxml
@@ -29,6 +29,9 @@
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
+                           <HBox.margin>
+                              <Insets left="20.0" />
+                           </HBox.margin>
                         </Label>
                         <Label text="Label">
                            <HBox.margin>
@@ -228,6 +231,9 @@
                                  <font>
                                     <Font name="System Bold" size="12.0" />
                                  </font>
+                                 <HBox.margin>
+                                    <Insets left="20.0" />
+                                 </HBox.margin>
                               </Label>
                               <Label text="Label">
                                  <HBox.margin>
@@ -257,7 +263,7 @@
                               </VBox>
                               <VBox prefHeight="295.0" prefWidth="427.0" style="-fx-background-color: e6e6fa;">
                                  <children>
-                                    <TitledPane animated="false" collapsible="false" prefHeight="207.0" prefWidth="352.0" text="Les Equipes participant à l'épreuve" VBox.vgrow="ALWAYS">
+                                    <TitledPane animated="false" collapsible="false" prefHeight="204.0" prefWidth="352.0" text="Les Equipes participant à l'épreuve" VBox.vgrow="ALWAYS">
                                        <content>
                                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="145.0" prefWidth="358.0">
                                              <children>
@@ -319,6 +325,9 @@
                                  <font>
                                     <Font name="System Bold" size="12.0" />
                                  </font>
+                                 <HBox.margin>
+                                    <Insets left="20.0" />
+                                 </HBox.margin>
                               </Label>
                               <Label text="Label">
                                  <HBox.margin>
