--- a/Diagramme/Equipe-FX.fxml
+++ b/Diagramme/Equipe-FX.fxml
@@ -22,6 +22,9 @@
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
+               <HBox.margin>
+                  <Insets left="20.0" />
+               </HBox.margin>
             </Label>
             <Label text="Label">
                <HBox.margin>
@@ -108,7 +111,7 @@
                               <Insets />
                            </opaqueInsets>
                            <children>
-                              <TableView layoutY="1.0" prefHeight="174.0" prefWidth="275.0">
+                              <TableView layoutY="1.0" prefHeight="174.0" prefWidth="274.0">
                                  <columns>
                                     <TableColumn prefWidth="53.333314299583435" text="Nom" />
                                     <TableColumn prefWidth="60.666683197021484" text="Prenom" />
