--- a/Diagramme/Acceuil-FX.fxml
+++ b/Diagramme/Acceuil-FX.fxml
@@ -11,11 +11,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="757.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <VBox prefHeight="63.0" prefWidth="600.0" style="-fx-background-color: eeeeee;" BorderPane.alignment="CENTER">
          <children>
-            <Label prefHeight="63.0" prefWidth="780.0" text="Bienvenue sur Appli Gestion JO">
+            <Label prefHeight="63.0" prefWidth="632.0" text="Bienvenue sur Appli Gestion JO">
                <font>
                   <Font name="System Bold" size="30.0" />
                </font>
@@ -56,24 +56,13 @@
       </HBox>
    </bottom>
    <center>
-      <HBox alignment="TOP_CENTER" prefHeight="296.0" prefWidth="879.0" BorderPane.alignment="CENTER">
+      <HBox BorderPane.alignment="CENTER">
          <BorderPane.margin>
             <Insets />
          </BorderPane.margin>
          <children>
-            <VBox prefHeight="295.0" prefWidth="369.0" style="-fx-background-color: e6e6fa;">
+            <VBox alignment="CENTER_LEFT" prefHeight="295.0" prefWidth="471.0" style="-fx-background-color: e6e6fa;">
                <children>
-                  <Label alignment="TOP_LEFT" prefHeight="25.0" prefWidth="190.0" text="Se connecter">
-                     <font>
-                        <Font size="20.0" />
-                     </font>
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                     <VBox.margin>
-                        <Insets left="200.0" />
-                     </VBox.margin>
-                  </Label>
                   <Label text="Connexion">
                      <font>
                         <Font name="Arial Rounded MT Bold" size="30.0" />
@@ -87,7 +76,7 @@
                         <Insets left="50.0" top="20.0" />
                      </padding>
                   </Label>
-                  <TextField>
+                  <TextField fx:id="identconnexe">
                      <VBox.margin>
                         <Insets left="50.0" right="50.0" />
                      </VBox.margin>
@@ -97,7 +86,7 @@
                         <Insets left="50.0" />
                      </padding>
                   </Label>
-                  <TextField>
+                  <TextField fx:id="motconnexe">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
@@ -105,61 +94,38 @@
                         <Insets left="50.0" right="50.0" />
                      </VBox.margin>
                   </TextField>
-                  <Button mnemonicParsing="false" text="Créer un nouveau compte">
-                     <VBox.margin>
-                        <Insets left="50.0" top="20.0" />
-                     </VBox.margin>
-                  </Button>
+                  <HBox prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Button fx:id="connecter" mnemonicParsing="false" text="Se connecter">
+                           <HBox.margin>
+                              <Insets left="50.0" top="20.0" />
+                           </HBox.margin>
+                        </Button>
+                        <Button fx:id="pascompte" mnemonicParsing="false" text="Pas de compte?">
+                           <HBox.margin>
+                              <Insets left="30.0" top="20.0" />
+                           </HBox.margin>
+                        </Button>
+                     </children>
+                  </HBox>
                </children>
             </VBox>
-            <VBox alignment="CENTER_LEFT" minHeight="186.0" minWidth="221.0" prefHeight="295.0" prefWidth="233.0" style="-fx-background-color: e6e6fa;">
+            <VBox alignment="CENTER" minHeight="186.0" minWidth="221.0" prefHeight="295.0" prefWidth="395.0" style="-fx-background-color: e6e6fa;">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
                <children>
-                  <Button alignment="TOP_LEFT" mnemonicParsing="false" prefHeight="49.0" prefWidth="205.0" text="Visiteur">
-                     <VBox.margin>
-                        <Insets bottom="10.0" />
-                     </VBox.margin>
-                     <font>
-                        <Font name="Eras Demi ITC" size="12.0" />
-                     </font>
-                     <graphic>
-                        <ImageView fitHeight="41.0" fitWidth="69.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@img/journaliste.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </Button>
-                  <Button alignment="TOP_LEFT" mnemonicParsing="false" prefHeight="49.0" prefWidth="206.0" text="Organisateur">
-                     <graphic>
-                        <ImageView fitHeight="41.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@img/organisateur.png" />
-                           </image></ImageView>
-                     </graphic>
-                     <font>
-                        <Font name="Eras Demi ITC" size="12.0" />
-                     </font>
-                  </Button>
-                  <Button alignment="TOP_LEFT" mnemonicParsing="false" prefHeight="49.0" prefWidth="205.0" text="Administrateur">
-                     <graphic>
-                        <ImageView fitHeight="41.0" fitWidth="69.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@img/administrateur.png" />
-                           </image></ImageView>
-                     </graphic>
-                     <VBox.margin>
-                        <Insets top="10.0" />
-                     </VBox.margin>
-                     <font>
-                        <Font name="System Bold" size="12.0" />
-                     </font>
-                  </Button>
+                  <ImageView fitHeight="106.0" fitWidth="330.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@img/Logo-anneax-olympiques-1024x473.png" />
+                     </image>
+                  </ImageView>
                </children>
             </VBox>
          </children>
       </HBox>
    </center>
+   <padding>
+      <Insets left="10.0" right="10.0" />
+   </padding>
 </BorderPane>
