--- a/Diagramme/Acceuil-FX.fxml
+++ b/Diagramme/Acceuil-FX.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -83,17 +84,17 @@
                   </TextField>
                   <Label text="Mot de passe">
                      <padding>
-                        <Insets left="50.0" />
+                        <Insets left="50.0" top="20.0" />
                      </padding>
                   </Label>
-                  <TextField fx:id="motconnexe">
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
+                  <PasswordField fx:id="motconnexe" prefHeight="25.0" prefWidth="328.0">
+                     <padding>
+                        <Insets left="10.0" right="10.0" />
+                     </padding>
                      <VBox.margin>
                         <Insets left="50.0" right="50.0" />
                      </VBox.margin>
-                  </TextField>
+                  </PasswordField>
                   <HBox prefHeight="100.0" prefWidth="200.0">
                      <children>
                         <Button fx:id="connecter" mnemonicParsing="false" text="Se connecter">
