--- a/Diagramme/Inscription-FX.fxml
+++ b/Diagramme/Inscription-FX.fxml
@@ -54,7 +54,7 @@
                   </TextField>
                   <Label text="Mot de passe">
                      <padding>
-                        <Insets left="50.0" />
+                        <Insets left="50.0" top="20.0" />
                      </padding>
                   </Label>
                   <TextField fx:id="creermdp">
@@ -87,29 +87,20 @@
                   </RadioButton>
                   <HBox prefHeight="100.0" prefWidth="200.0">
                      <children>
-                        <Button fx:id="nouveau_compte" mnemonicParsing="false" prefHeight="37.0" prefWidth="187.0" text="Créer un nouveau compte" HBox.hgrow="ALWAYS">
-                           <padding>
-                              <Insets left="10.0" />
-                           </padding>
+                        <Button fx:id="nouveau_compte" mnemonicParsing="false" text="Créer un nouveau compte">
                            <HBox.margin>
-                              <Insets bottom="10.0" />
+                              <Insets left="50.0" top="20.0" />
                            </HBox.margin>
                         </Button>
-                        <Button fx:id="bouton_retour" mnemonicParsing="false" prefHeight="29.0" prefWidth="76.0" text="retour" HBox.hgrow="ALWAYS">
-                           <padding>
-                              <Insets left="10.0" right="10.0" />
-                           </padding>
+                        <Button fx:id="Bretour" mnemonicParsing="false" text="retour">
                            <HBox.margin>
-                              <Insets bottom="10.0" />
+                              <Insets left="30.0" top="20.0" />
                            </HBox.margin>
                         </Button>
                      </children>
                      <padding>
-                        <Insets left="20.0" top="20.0" />
-                     </padding>
-                     <VBox.margin>
                         <Insets bottom="10.0" />
-                     </VBox.margin>
+                     </padding>
                   </HBox>
                </children>
             </VBox>
