--- a/Diagramme/Ajouter-FX.fxml
+++ b/Diagramme/Ajouter-FX.fxml
@@ -52,7 +52,7 @@
                                     <Insets bottom="10.0" />
                                  </VBox.margin>
                               </Label>
-                              <TextField>
+                              <TextField fx:id="textFieldNomA">
                                  <VBox.margin>
                                     <Insets left="20.0" right="40.0" />
                                  </VBox.margin>
@@ -62,7 +62,7 @@
                                     <Insets bottom="10.0" left="20.0" top="10.0" />
                                  </VBox.margin>
                               </Label>
-                              <TextField>
+                              <TextField fx:id="textFieldprenomA">
                                  <VBox.margin>
                                     <Insets left="20.0" right="40.0" />
                                  </VBox.margin>
@@ -105,7 +105,7 @@
                                           <Insets />
                                        </HBox.margin>
                                     </Label>
-                                    <TextField prefHeight="25.0" prefWidth="40.0">
+                                    <TextField fx:id="textFieldAGilA" prefHeight="25.0" prefWidth="40.0">
                                        <HBox.margin>
                                           <Insets left="20.0" />
                                        </HBox.margin>
@@ -115,7 +115,7 @@
                                     <Insets top="40.0" />
                                  </VBox.margin>
                               </HBox>
-                              <Slider>
+                              <Slider fx:id="slideragA">
                                  <VBox.margin>
                                     <Insets bottom="40.0" left="40.0" right="40.0" />
                                  </VBox.margin>
@@ -127,7 +127,7 @@
                                           <Insets left="-20.0" />
                                        </HBox.margin>
                                     </Label>
-                                    <TextField prefWidth="40.0">
+                                    <TextField fx:id="textFieldEndA" prefWidth="40.0">
                                        <HBox.margin>
                                           <Insets left="20.0" />
                                        </HBox.margin>
@@ -137,7 +137,7 @@
                                     <Insets top="-20.0" />
                                  </VBox.margin>
                               </HBox>
-                              <Slider>
+                              <Slider fx:id="sliderendA">
                                  <VBox.margin>
                                     <Insets bottom="40.0" left="40.0" right="40.0" />
                                  </VBox.margin>
@@ -149,7 +149,7 @@
                                           <Insets left="10.0" />
                                        </HBox.margin>
                                     </Label>
-                                    <TextField prefWidth="40.0">
+                                    <TextField fx:id="textFieldforcA" prefWidth="40.0">
                                        <HBox.margin>
                                           <Insets left="20.0" />
                                        </HBox.margin>
@@ -159,7 +159,7 @@
                                     <Insets top="-10.0" />
                                  </VBox.margin>
                               </HBox>
-                              <Slider>
+                              <Slider fx:id="sliderForA">
                                  <VBox.margin>
                                     <Insets bottom="40.0" left="40.0" right="40.0" />
                                  </VBox.margin>
@@ -172,7 +172,7 @@
                <bottom>
                   <HBox prefHeight="57.0" prefWidth="600.0" BorderPane.alignment="CENTER">
                      <children>
-                        <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="139.0" text="Créer l'Athlète" />
+                        <Button fx:id="bCreerA" mnemonicParsing="false" prefHeight="25.0" prefWidth="139.0" text="Créer l'Athlète" />
                         <Button fx:id="retour4" mnemonicParsing="false" text="retour" />
                      </children>
                   </HBox>
@@ -210,7 +210,7 @@
                                     <Insets bottom="10.0" />
                                  </VBox.margin>
                               </Label>
-                              <TextField prefWidth="40.0">
+                              <TextField fx:id="textfieldSport" prefWidth="40.0">
                                  <VBox.margin>
                                     <Insets left="20.0" right="40.0" />
                                  </VBox.margin>
@@ -240,7 +240,7 @@
                <bottom>
                   <HBox prefHeight="57.0" prefWidth="600.0" BorderPane.alignment="CENTER">
                      <children>
-                        <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="109.0" text="Créer le Sport" />
+                        <Button fx:id="BCreerSP" mnemonicParsing="false" prefHeight="25.0" prefWidth="109.0" text="Créer le Sport" />
                         <Button fx:id="retour3" mnemonicParsing="false" text="retour" />
                      </children>
                   </HBox>
@@ -278,7 +278,7 @@
                                     <Insets bottom="10.0" />
                                  </VBox.margin>
                               </Label>
-                              <TextField prefWidth="40.0">
+                              <TextField fx:id="textFieldnbjoueurmax" prefWidth="40.0">
                                  <VBox.margin>
                                     <Insets left="20.0" right="230.0" />
                                  </VBox.margin>
@@ -340,7 +340,7 @@
                                     </AnchorPane>
                                 </content>
                               </TitledPane>
-                              <Button mnemonicParsing="false" text="Ajouter un athlète +" />
+                              <Button fx:id="BajouAdansEQ" mnemonicParsing="false" text="Ajouter un athlète +" />
                            </children>
                         </VBox>
                      </children>
@@ -349,7 +349,7 @@
                <bottom>
                   <HBox prefHeight="57.0" prefWidth="600.0" BorderPane.alignment="CENTER">
                      <children>
-                        <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="109.0" text="Créer l'Equipe" />
+                        <Button fx:id="BcreerEQ" mnemonicParsing="false" prefHeight="25.0" prefWidth="147.0" text="Créer l'Equipe" />
                         <Button fx:id="retour2" mnemonicParsing="false" text="retour" />
                      </children>
                   </HBox>
@@ -389,7 +389,7 @@
                                           <Insets bottom="10.0" />
                                        </VBox.margin>
                                     </Label>
-                                    <TextField>
+                                    <TextField fx:id="textFieldNomEP">
                                        <VBox.margin>
                                           <Insets left="20.0" right="40.0" />
                                        </VBox.margin>
@@ -431,7 +431,7 @@
                                           <Insets left="20.0" top="20.0" />
                                        </VBox.margin>
                                     </Label>
-                                    <TextField>
+                                    <TextField fx:id="textFieldCaractEP">
                                        <VBox.margin>
                                           <Insets left="20.0" right="20.0" top="5.0" />
                                        </VBox.margin>
@@ -497,7 +497,7 @@
                                           <Insets left="20.0" />
                                        </VBox.margin>
                                     </Label>
-                                    <TextField prefWidth="40.0">
+                                    <TextField fx:id="textFieldDemandeAGIL" prefWidth="40.0">
                                        <VBox.margin>
                                           <Insets left="20.0" right="220.0" />
                                        </VBox.margin>
@@ -507,7 +507,7 @@
                                           <Insets left="20.0" />
                                        </VBox.margin>
                                     </Label>
-                                    <TextField prefWidth="40.0">
+                                    <TextField fx:id="textFieldDemandeEND" prefWidth="40.0">
                                        <VBox.margin>
                                           <Insets left="20.0" right="220.0" />
                                        </VBox.margin>
@@ -517,7 +517,7 @@
                                           <Insets left="20.0" />
                                        </VBox.margin>
                                     </Label>
-                                    <TextField prefWidth="40.0">
+                                    <TextField fx:id="textFieldDemandeFORC" prefHeight="24.0" prefWidth="49.0">
                                        <VBox.margin>
                                           <Insets left="20.0" right="220.0" />
                                        </VBox.margin>
@@ -612,7 +612,7 @@
                <bottom>
                   <HBox prefHeight="57.0" prefWidth="600.0" BorderPane.alignment="CENTER">
                      <children>
-                        <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="109.0" text="Créer l'Epreuve" />
+                        <Button fx:id="BcreerEP" mnemonicParsing="false" prefHeight="25.0" prefWidth="183.0" text="Créer l'Epreuve" />
                         <Button fx:id="retour1" mnemonicParsing="false" text="retour" />
                      </children>
                   </HBox>
@@ -650,7 +650,7 @@
                                     <Insets left="20.0" />
                                  </padding>
                               </Label>
-                              <TextField>
+                              <TextField fx:id="textFieldNomP">
                                  <VBox.margin>
                                     <Insets bottom="30.0" left="20.0" right="40.0" />
                                  </VBox.margin>
@@ -687,7 +687,7 @@
                            <children>
                               <HBox alignment="CENTER" prefHeight="40.0" prefWidth="291.0" />
                               <ImageView fitHeight="128.0" fitWidth="228.0" pickOnBounds="true" preserveRatio="true" />
-                              <Button mnemonicParsing="false" text="Choisir le drapeau...">
+                              <Button mnemonicParsing="false" prefHeight="24.0" prefWidth="172.0" text="Choisir le drapeau...">
                                  <VBox.margin>
                                     <Insets bottom="60.0" />
                                  </VBox.margin>
@@ -700,7 +700,7 @@
                <bottom>
                   <HBox prefHeight="57.0" prefWidth="600.0" BorderPane.alignment="CENTER">
                      <children>
-                        <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="109.0" text="Créer le Pays" />
+                        <Button fx:id="BCreerP" mnemonicParsing="false" prefHeight="25.0" prefWidth="109.0" text="Créer le Pays" />
                         <Button fx:id="retour" mnemonicParsing="false" text="retour" />
                      </children>
                   </HBox>
