--- a/Diagramme/Acceuil-FX.fxml
+++ b/Diagramme/Acceuil-FX.fxml
@@ -77,7 +77,7 @@
                         <Insets left="50.0" top="20.0" />
                      </padding>
                   </Label>
-                  <TextField fx:id="identconnexe">
+                  <TextField fx:id="identconnexe" promptText="identifiant">
                      <VBox.margin>
                         <Insets left="50.0" right="50.0" />
                      </VBox.margin>
@@ -87,7 +87,7 @@
                         <Insets left="50.0" top="20.0" />
                      </padding>
                   </Label>
-                  <PasswordField fx:id="motconnexe" prefHeight="25.0" prefWidth="328.0">
+                  <PasswordField fx:id="motconnexe" prefHeight="25.0" prefWidth="328.0" promptText="mot de passe">
                      <padding>
                         <Insets left="10.0" right="10.0" />
                      </padding>
