--- a/Diagramme/Ajouter-FX.fxml
+++ b/Diagramme/Ajouter-FX.fxml
@@ -53,7 +53,7 @@
                                     <Insets bottom="10.0" />
                                  </VBox.margin>
                               </Label>
-                              <TextField fx:id="textFieldNomA">
+                              <TextField fx:id="textFieldNomA" promptText="enter le nom de l'athlete">
                                  <VBox.margin>
                                     <Insets left="20.0" right="40.0" />
                                  </VBox.margin>
@@ -63,7 +63,7 @@
                                     <Insets bottom="10.0" left="20.0" top="10.0" />
                                  </VBox.margin>
                               </Label>
-                              <TextField fx:id="textFieldprenomA">
+                              <TextField fx:id="textFieldprenomA" promptText="enter le prenom de l'athlete">
                                  <VBox.margin>
                                     <Insets left="20.0" right="40.0" />
                                  </VBox.margin>
@@ -211,7 +211,7 @@
                                     <Insets bottom="10.0" />
                                  </VBox.margin>
                               </Label>
-                              <TextField fx:id="textfieldSport" prefWidth="40.0">
+                              <TextField fx:id="textfieldSport" prefWidth="40.0" promptText="enter le nom du sport">
                                  <VBox.margin>
                                     <Insets left="20.0" right="40.0" />
                                  </VBox.margin>
@@ -279,7 +279,7 @@
                                     <Insets bottom="10.0" />
                                  </VBox.margin>
                               </Label>
-                              <TextField fx:id="textFieldnbjoueurmax" prefWidth="40.0">
+                              <TextField fx:id="textFieldnbjoueurmax" prefHeight="24.0" prefWidth="72.0" promptText="max">
                                  <VBox.margin>
                                     <Insets left="20.0" right="230.0" />
                                  </VBox.margin>
@@ -390,7 +390,7 @@
                                           <Insets bottom="10.0" />
                                        </VBox.margin>
                                     </Label>
-                                    <TextField fx:id="textFieldNomEP">
+                                    <TextField fx:id="textFieldNomEP" promptText="enter le nom de l'épreuve">
                                        <VBox.margin>
                                           <Insets left="20.0" right="40.0" />
                                        </VBox.margin>
@@ -432,7 +432,7 @@
                                           <Insets left="20.0" top="20.0" />
                                        </VBox.margin>
                                     </Label>
-                                    <TextField fx:id="textFieldCaractEP">
+                                    <TextField fx:id="textFieldCaractEP" promptText="entrer la caracteristique de l'épreuve">
                                        <VBox.margin>
                                           <Insets left="20.0" right="20.0" top="5.0" />
                                        </VBox.margin>
@@ -651,7 +651,7 @@
                                     <Insets left="20.0" />
                                  </padding>
                               </Label>
-                              <TextField fx:id="textFieldNomP">
+                              <TextField fx:id="textFieldNomP" promptText="entrer le nom du pays">
                                  <VBox.margin>
                                     <Insets bottom="30.0" left="20.0" right="40.0" />
                                  </VBox.margin>
