--- a/Diagramme/Ajouter-FX.fxml
+++ b/Diagramme/Ajouter-FX.fxml
@@ -21,7 +21,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<TabPane prefHeight="431.0" prefWidth="732.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
+<TabPane prefHeight="431.0" prefWidth="732.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <tabs>
       <Tab fx:id="tab1" text="Ajoute Athlèthe">
          <content>
@@ -173,7 +173,7 @@
                <bottom>
                   <HBox prefHeight="57.0" prefWidth="600.0" BorderPane.alignment="CENTER">
                      <children>
-                        <Button fx:id="bCreerA" mnemonicParsing="false" prefHeight="25.0" prefWidth="139.0" text="Créer l'Athlète" />
+                        <Button fx:id="bCreerA" mnemonicParsing="false" prefHeight="25.0" prefWidth="139.0" text="Créer l'athlète" />
                         <Button fx:id="retour4" mnemonicParsing="false" text="retour" />
                      </children>
                   </HBox>
