les fichier sont (un peu) mieux ranger

--- a/sae_java/src/main/java/Ajouter-FX.fxml
+++ b/sae_java/src/main/java/Ajouter-FX.fxml
@@ -677,7 +677,7 @@
                                        <graphic>
                                           <ImageView fitHeight="33.0" fitWidth="34.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
-                                                <Image url="@img/play.png" />
+                                                <Image url="@../../../img/play.png" />
                                              </image></ImageView>
                                        </graphic>
                                        <HBox.margin>
