--- a/sae_java/src/main/java/Inscription-FX.fxml
+++ b/sae_java/src/main/java/Inscription-FX.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <VBox prefHeight="63.0" prefWidth="600.0" style="-fx-background-color: eeeeee;" BorderPane.alignment="CENTER">
          <children>
@@ -111,7 +111,7 @@
                <children>
                   <ImageView fitHeight="108.0" fitWidth="210.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@img/Logo-anneax-olympiques-1024x473.png" />
+                        <Image url="@../../../img/Logo-anneax-olympiques-1024x473.png" />
                      </image></ImageView>
                </children>
                <padding>
